# varuint

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: lib.rs  read_write.rs  ser_deser.rs  varint.rs  varuint.rs
tests/: read_write.rs  varuint.rs
