[package]
name = "varuint"
version = "0.5.1"
authors = ["Artem Shein <sc-github@aisys.ru>"]

description = "Variable length signed and unsigned integer types"
repository = "https://github.com/artemshein/varuint"
categories = ["data-structures", "encoding", "compression"]
license = "MIT"

[features]
default = []
serde-support = ["serde", "serde_derive"]

[dependencies]
serde_derive = { version = "1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
