[package]
name = "varuint"
version = "0.7.1"
authors = ["Artem Shein <sc-github@aisys.ru>"]
edition = "2021"

description = "Variable length signed and unsigned integer types"
repository = "https://github.com/artemshein/varuint"
categories = ["data-structures", "encoding", "compression"]
license = "MIT"

[features]
default = []
serde-support = ["dep:serde", "dep:serde_derive"]

[dependencies]
serde_derive = { version = "1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
